--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@ hr.RampBreak--l {
 
 .RampInputCheckbox--container {
   display: flex;
+  cursor: pointer;
 }
 
 .RampInputCheckbox--label {
@@ -154,6 +155,7 @@ hr.RampBreak--l {
   height: 20px;
   width: 20px;
   opacity: 0;
+  cursor: pointer !important;
 }
 
 .RampButton {
@@ -165,10 +167,6 @@ hr.RampBreak--l {
 
 .NoButton {
   display: none;
-  border: 1px solid var(--color-light-shade);
-  background-color: var(--color-light-shade);
-  padding: 0.5rem;
-  cursor: pointer;
 }
 
 .RampButton:hover {
